# bettip

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  README_PILOT.md  agentspec.json  cmd-uv.txt  migrate_to_jsonl.py  pyproject.toml  requirements.txt  update_fixtures_from_details.py
cloudformation/: core.yaml  lambda.yaml  test.yaml
commands/: cmd-uv.txt  pipeline_cmd  quick-check-commands  start=project-cmd
config/: belgian_pro_league.yaml  bundesliga.yaml  championship.yaml  ekstraklasa.yaml  eredivisie.yaml  forecastability.json  inactive_leagues.yaml  la_liga.yaml  la_liga_2.yaml  liga_mx.yaml  ligue_1.yaml  local.yaml  mls.yaml  portuguese_liga.yaml  premier_league.yaml  prod.yaml  scottish_premiership.yaml  serie_a.yaml  sniper_deployment.json  strategies.yaml  training_config.yaml  turkish_super_lig.yaml
data/: verify_data.ipynb
docs/: DEPLOYED_MODELS.txt  PROJECT_DOCUMENTATION.md  dashboard.html  improvement_research_plan.md  next_steps_plan.md  todo.md
entrypoints/: collect.py  daily_pipeline.py  download_data.py  download_features.py  features.py  fetch_odds.py  paper_trade.py  preprocess.py  run_pipeline.py  send_notification.py  train.py  upload_data.py
experiments/: analyze_sniper_runs.ipynb  analyze_strategy_performance.py  away_win_paper_trade.py  backfill_injuries.py  backfill_weather.py  cards_paper_trade.py  check_results.ipynb  clv_workflow.py  collect_missing_match_stats.py  comprehensive_ml_analysis.py  corners_paper_trade.py  create_cross_market_features.py  demo_predictions.py  feature_param_sensitivity.py  fetch_prematch_odds.py  fix_xg_leakage.py  forecastability_analysis.py  fouls_odds_validator.py  fouls_paper_trade.py  full_betting_analysis.py  full_ml_analysis.py  generate_daily_recommendations.py  generate_dashboard.py  generate_prematch_predictions.py  integrate_weather_bulk.py  integrate_weather_data.py  integrate_weather_small.py  integrate_xg_data.py  niche_markets_v2.py  paper_trading_tracker.py  (+49 more)
(+6178 files in other folders)
