[project]
name = "bettip"
version = "0.1.0"
description = "Football ML prediction pipeline"
dependencies = [
    "requests>=2.28",
    "pandas>=2.0",
    "pyarrow",
    "python-dotenv",
    "tqdm",
    "matplotlib",
    "jupyterlab",
    "scikit-learn",
    "pytest",
    "seaborn",
    "pyyaml>=6.0",
    "numpy>=1.24"
]
requires-python = ">=3.10,<3.11"

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
