[project]
name = "bettip"
version = "0.1.0"
description = "Football ML prediction pipeline"
dependencies = [
    # Core
    "requests>=2.28",
    "pandas>=2.0",
    "pyarrow",
    "python-dotenv",
    "tqdm",
    "pyyaml>=6.0",
    "numpy>=1.24",
    # Data & Visualization
    "matplotlib",
    "jupyterlab",
    "seaborn",
    # ML Models
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "boruta>=0.3", # Feature selection
    # Experiment Tracking & Tuning
    "mlflow>=2.10",
    "optuna>=3.5",
    "optuna-integration[mlflow]>=4.0",
    # Model Interpretability
    "shap>=0.44",
    # Storage & Testing
    "huggingface_hub>=0.20",
    "pytest",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.3",
    "metaflow>=2.19.15",
    "understat>=0.1.14",
    "aiohttp>=3.8.3",
    "xgbfir>=0.3.1",
    "openpyxl>=3.1.5",
]
requires-python = ">=3.10,<3.11"

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
